--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -566,20 +566,25 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
   }
 }
 
-// 1. .group-mixed--middle can be used directly in <a> elements for increased clicking area.
-// 2. Expand width and line-height when there are no sibling elements in .group-mixed
+// 1. Align vertically.
+//    textarea is 22px, .group-mixed default height is 44px, use remaining 22px for padding.
+//    NOTE: Small textarea is 18px.
+// 2. .group-mixed--middle can be used directly in <a> elements for increased clicking area.
+// 3. Expand width and line-height when there are no sibling elements in .group-mixed
 .group-mixed--middle {
+  padding-top: @padding-vertically-centered;    // [1]
+  padding-bottom: @padding-vertically-centered; // [1]
   vertical-align: middle;
   width: 100%;
   &:first-child {
-    padding-left: @grid-horizontal;   /* [1] */
+    padding-left: @grid-horizontal;   /* [2] */
   }
   &:last-child {
-    padding-right: @grid-horizontal;  /* [1] */
+    padding-right: @grid-horizontal;  /* [2] */
   }
   &:only-child {
-    display: block;               /* [2] */
-    line-height: @grid-vertical;  /* [2] */
+    display: block;               /* [3] */
+    line-height: @grid-vertical;  /* [3] */
   }
 }
 
@@ -618,24 +623,22 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
 //      (WIDTH_icon-star.large - WIDTH_icon.trash) / 2
 .group-mixed {
   .group-mixed--middle {
-    padding-top: @padding-vertically-centered;    // [1]
-    padding-bottom: @padding-vertically-centered; // [1]
     & > a:not(.link-inline) {
       display: block;                               // [2]
       padding-top: inherit;    // [2]
       margin-top: -@padding-vertically-centered;    // [2]
       padding-bottom: inherit; // [2]
       margin-bottom: -@padding-vertically-centered; // [2]
-      &.link-list-item {
-        padding-top: @padding-vertically-centered-small-content;    // [1]
-        padding-bottom: @padding-vertically-centered-small-content; // [1]
-      }
       &:first-of-type:not(:only-of-type) {
         margin-bottom: -@padding-vertically-centered / 2; // [3]
       }
       &:last-of-type:not(:only-of-type) {
         padding-top: 0; // [3]
         margin-top: 0;  // [3]
+      }
+      &.link-list-item {
+        padding-top: @padding-vertically-centered-small-content;    // [1]
+        padding-bottom: @padding-vertically-centered-small-content; // [1]
       }
     }
   }
