Indent child lists.

--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -163,3 +163,8 @@ html {
 .invisible {
   visibility: hidden;
 }
+
+// 1. Indent element, e.g. child list.
+.indent {
+  padding-left: @grid-horizontal; // [1]
+}
