UI for sharing lists.

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -145,6 +145,10 @@ Use `.text-details` to separate details from body text.
   color: @color-text-error;
 }
 
+.text-remove {
+  color: @color-text-remove;
+}
+
 .text-link {
   display: inline-block;
   line-height: @grid-vertical-half;
