--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -277,7 +277,7 @@ Extended Mind specific UI-components, e.g. welcome/landing page, timeline, sidem
 
 // DATE
 .datepicker-date {
-  font-size: @size-font-medium;
+  .text-metadata();
 }
 
 .datepicker-day-container.past .datepicker-date {
