Downplay past events in agenda calendar

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -790,6 +790,13 @@ TODO: Example needed
   }
 }
 
+.agenda .past-event .group-mixed,
+.past-date .agenda .group-mixed {
+  &, .icon-sort:after, .text-agenda--time.emphasize:first-line {
+    color: @color-text-downplayed;
+  }
+}
+
 // 1. Make room for text inside .group-mixed--left
 //    NOTE: 'starts' is the longest word in content which needs to fit inside.
 //          Adjust if changed.
