Added API and UI logic for list share backend functions and small fixes to list share sub editor.

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -1190,6 +1190,11 @@ Use `.group-instruction-jumbtron` to create a very large instruction block in th
   margin-top: 0;
 }
 
+.group-error.comfortable {
+  position: initial;
+  height: @grid-vertical-small;
+}
+
 /*
 `.group-symmetrical` groups together up to three adjacent elements
 symmetrically so that `.group-symmetrical-middle` is always in the
