Fixed broken slide bounce animation during onboarding starting from Chromium version 43. As listed in the changelog http://blog.chromium.org/2015/04/chrome-43-beta-web-midi-and-upgrading.html, "CSS animations can now be used without the -webkit prefix", so Chromium now uses the unprefixed animation which had a typo in it.

--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -870,13 +870,13 @@ a.link-menu.onboarding:not(.highlighted) span {
 }
 
 @keyframes onboarding-slide-bounce {
-  0% {-transform: translateY(0);}
-  20% {-transform: translateY(0);}
-  40% {-transform: translateY(-50px);}
-  45% {-transform: translateY(0);}
-  50% {-transform: translateY(-25px);}
-  55% {-transform: translateY(0);}
-  60% {-transform: translateY(-5px);}
-  65% {-transform: translateY(0);}
-  100% {-transform: translateY(0);}
+  0% {transform: translateY(0);}
+  20% {transform: translateY(0);}
+  40% {transform: translateY(-50px);}
+  45% {transform: translateY(0);}
+  50% {transform: translateY(-25px);}
+  55% {transform: translateY(0);}
+  60% {transform: translateY(-5px);}
+  65% {transform: translateY(0);}
+  100% {transform: translateY(0);}
 }
