Removed unintentional -webkit prefix from transition-property defined for modal open and close animation.

--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -494,7 +494,7 @@ input[type="checkbox"]:checked + label:before {
   -o-transition-duration: @speed-animate-modal, @speed-animate-modal;
   -o-transition-timing-function: @timing-animate, @timing-animate;
 
-  transition-property: -webkit-transform, opacity;
+  transition-property: transform, opacity;
   transition-duration: @speed-animate-modal, @speed-animate-modal;
   transition-timing-function: @timing-animate, @timing-animate;
 }
