Added created/modified/deleted systematically to task, note and list editors

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -1324,6 +1324,9 @@ Not compatible with `.row` so we need to apply padding-left and -right inside.
       pointer-events: auto !important;
     }
   }
+  .swiper-wrapper {
+    pointer-events: auto !important;
+  }
 }
 
 // Groups rows of detailed comments
