Fixed a bug where swiping was not disabled when reminder editor or list share editor was open. Now sub editors expand to full height by default and this behaviour is overridden when sub editor is closed by clicking elsewhere.

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -275,6 +275,11 @@ Vertically center .container-master and .container-editor in large screens
   }
 }
 
+// 1. Set height to expand vertically.
+.container-sub-editor {
+  height: 100%; // [1]
+}
+
 .container-master .swiper-slide {
   .container-content,
   .container-content--after {
