--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -437,9 +437,13 @@ TODO: working example needed!
   }
 }
 
+// 1. Override any height set to .container-sub-editor to make (possible) click elsewhere working in.
 .editable-field-container.active {
   &, *:not(.link-disable) {
     pointer-events: auto !important;
+  }
+  &.container-sub-editor {
+    height: auto; // [1]
   }
   .link-disable {
     &, * {
