Fixed a bug where app would perform "warm" boot/reload or something when clicked done on focused text property (content, description, url) in editor. Probably parsing $scope variable bound to editable-field-container attribute failed when the element with ng-if was rendered. Now the done/save link has a override class, instead of editable-field-container, which allows pointer events when the backdrop is active.

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -431,9 +431,15 @@ TODO: working example needed!
 }
 
 // 1. Blur backdrop. See http://tympanus.net/codrops/2011/12/14/item-blur-effect-with-css3-and-jquery/
+// 2. Allow clicks for overridden elements.
 .editable-field-backdrop.active {
   * {
     pointer-events: none;
+  }
+  a.override-disabled {
+    &, & > span {
+      pointer-events: auto !important;  // [2]
+    }
   }
 }
 
