Added tests to list sharing, added full edit prevention for read only lists

--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -164,3 +164,8 @@ input[type="checkbox"]:checked + label:before {
 input[type="checkbox"].downplayed:checked + label:before {
   color: @color-text-downplayed-light;
 }
+
+// Completely disable checkboxes with .checkbox-disable
+.checkbox-disable input[type="checkbox"] + label {
+  pointer-events:none;
+}
