Working setup of neo4j running on mongo

--- a/backend/src/main/docker/logback.xml.tmpl
+++ b/backend/src/main/docker/logback.xml.tmpl
@@ -27,7 +27,7 @@
   </appender>
 
   <appender name="MONGODB" class="org.extendedmind.logback.MongoDBAppender">
-    <host>localhost</host>
+    <host>${MONGODB_PORT_27017_TCP_ADDR}</host>
     <port>27017</port>
     <db>cube</db>
   </appender>
