--- a/backend/src/main/docker/neo4j.properties.tmpl
+++ b/backend/src/main/docker/neo4j.properties.tmpl
@@ -1,3 +1,5 @@
 {{if exists "/extendedmind/backend/neo4jupgrade"}}
 allow_store_upgrade=true
 {{end}}
+online_backup_enabled=true
+online_backup_server=0.0.0.0:6362
