Probably fixed fast toggling editor footer (keywords/later) sometimes opens the footer without animation which was broken since 05807e7e7352f748f870e584a470454850d7f3cb.

--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -852,3 +852,21 @@ a.link-menu.onboarding:not(.highlighted) span {
   65% {transform: translateY(0);}
   100% {transform: translateY(0);}
 }
+
+@speed-animate-editor-footer-toggle: .3s;
+
+.animate-editor-footer-open {
+  -webkit-transition: -webkit-transform @speed-animate-editor-footer-toggle @timing-animate;
+  -moz-transition: -moz-transform @speed-animate-editor-footer-toggle @timing-animate;
+  -o-transition: -o-transform @speed-animate-editor-footer-toggle @timing-animate;
+  -ms-transition: -ms-transform @speed-animate-editor-footer-toggle @timing-animate;
+  transition: transform @speed-animate-editor-footer-toggle @timing-animate;
+}
+
+.animate-editor-footer-close {
+  -webkit-transition: -webkit-transform @speed-animate-editor-footer-toggle @timing-animate;
+  -moz-transition: -moz-transform @speed-animate-editor-footer-toggle @timing-animate;
+  -o-transition: -o-transform @speed-animate-editor-footer-toggle @timing-animate;
+  -ms-transition: -ms-transform @speed-animate-editor-footer-toggle @timing-animate;
+  transition: transform @speed-animate-editor-footer-toggle @timing-animate;
+}
